publications api filtering
